2017-10-14  Werner Lemberg  <wl@gnu.org>

	[ftbench] Add new test for creating face and loading glyph together.

	This will be test `k'.

	* src/ftbench.c (FT_BENCH_NEW_FACE_AND_LOAD_GLYPH): New enum value.
	(bench_desc): Updated.
	(test_new_face_and_load_glyph): New function.
	(main): Handle it.

	(test_image_cache, test_sbit_cache): Tag unused variables.

	* src/ftbench.1: Updated.

2017-10-14  Werner Lemberg  <wl@gnu.org>

	[ftbench] New option `-j' to specify last glyph index.

	* src/ftbench.c (last_index): New global variable.
	(test_load, test_load_advances, test_render, test_embolden,
	test_get_glyph, test_get_cbox, test_get_bbox, test_image_cache,
	test_sbit_cache, get_charset): Use it.
	(usage): Updated.
	(main): Handle `-j'.
	Initialize `last_index'.
	Update test output.

2017-10-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (grid_status_draw_outline): Show ascender and descender.

2017-10-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgamma.c (Render_Bitmap): Ignore target flow.

2017-10-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/win32/grwin32.c (gr_win32_surface_set_title): Small fix.

2017-10-04  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Correctly handle MM data.

	We have to reload the MM data after the cache gets reset.

	* src/ftgrid.c (event_font_change): Move source code up in file.
	(event_cff_hinting_engine_change,
	event_tt_interpreter_version_change, event_warping_change,
	event_lcd_mode_change, Process_Event <'h'>): Call
	`event_font_change'.

2017-10-03  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Fix crash.

	* src/ftgrid.c (grid_status_draw_outline): Avoid a crash if a font
	can no longer be opened.

2017-10-03  Werner Lemberg  <wl@gnu.org>

	Correctly handle Type1 font names without extension.

	* src/ftcommon.c (my_face_requester): Unset the suffix if the font
	file doesn't have an extension.

2017-09-21  Werner Lemberg  <wl@gnu.org>

	* src/ftmulti.c (main): Fix memory leak.
